--- a/root-app.yaml
+++ b/root-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/priyanshu3103/dev-argocd
+    repoURL: https://github.com/priyanshu3103/dev-argocd.git
     targetRevision: master
     path: apps
   destination:
