Initial steps of argocd

--- a/apps/rbac/argocd-cm.yaml
+++ b/apps/rbac/argocd-cm.yaml
@@ -8,14 +8,12 @@ data:
 
   dex.config: |
     connectors:
-      - type: github
-        id: github
-        name: GitHub
-        config:
-          clientID: Ov23limd3PFv9mcPHlaY
-          clientSecret: c860c65d15da56644f4238c7c5b2743fab23b5ab
-          orgs:
-            - name: priyanshu3103
-          teamNameField: slug
-          loadAllGroups: false
-          useLoginAsID: false
+    - type: github
+      id: github
+      name: GitHub
+      config:
+        clientID: Ov23limd3PFv9mcPHlaY
+        clientSecret: c860c65d15da56644f4238c7c5b2743fab23b5ab
+        # Remove orgs block completely ← 
+        loadAllGroups: false
+        useLoginAsID: true
