--- a/apps/rbac/argocd-cm.yaml
+++ b/apps/rbac/argocd-cm.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: argocd
 data:
   url: https://35.81.148.199:31693
-
+# Auto reload config every 10 seconds
+  timeout.reconciliation: 10s
   dex.config: |
     connectors:
     - type: github
