--- a/apps/rbac/argocd-rbac-cm.yaml
+++ b/apps/rbac/argocd-rbac-cm.yaml
@@ -16,3 +16,4 @@ data:
     p, role:admin, gpgkeys, *, *, allow
     # Bind your GitHub username directly
     g, priyanshu3103, role:admin
+  scopes: '[groups, email]'
