--- a/root-app.yaml
+++ b/root-app.yaml
@@ -20,6 +20,7 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - RespectIgnoreDifferences=true
   # Resource filters - what root app can manage
   ignoreDifferences:
     - group: argoproj.io
