--- a/apps/jenkins-app.yaml
+++ b/apps/jenkins-app.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: jenkins-rules
   source:
-    repoURL: https://github.com/priyanshu3103/argocd-manifests
+    repoURL: https://github.com/priyanshu3103/dev-argocd.git
     targetRevision: master
     path: apps/jenkins        # ← ArgoCD reads all yaml files in folder
   destination:
